--- a/indx.html
+++ b/indx.html
@@ -14,7 +14,25 @@
     <title>Tap30</title>
   </head>
   <body>
-   
+    <header class="main-header">
+      <nav class="nav container">
+        <a href="#">
+          <img src="assets/images/logo.svg" alt="logo">
+        </a>
+        <div class="nav__toggler">
+          <div class="bar bar-one"></div>
+          <div class="bar bar-two"></div>
+          <div class="bar bar-three"></div>
+        </div>
+        <ul class="list nav__list">
+          <li class="nav__item"><a href="#">پشتیبانی</a></li>
+          <li class="nav__item"><a href="#">خدمات کسب و کارها</a></li>
+          <li class="nav__item"><a href="#">فرصت های شغلی</a></li>
+          <li class="nav__item"><a href="#">وبلاگ</a></li>
+          <li class="nav__item cta"><a href="#" class="btn btn--primary">دانلود تپسی</a></li>
+        </ul>
+      </nav>
+    </header>
 
 
 
@@ -24,5 +42,6 @@
 
 
     <!-- <script src="js/map.js"></script> -->
+    <script src="js/main.js"></script>
   </body>
 </html>
