--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <title>Tapsi Demo | دوره حرفه ای طراحی وب رسپانسیو</title>
+    <title>Redesign Tapsi </title>
     <meta
       name="description"
       content="این وبسایت توسط صاحب محمدی به عنوان دوره طراحی حرفه ای رسپانسیو وب آماده شده است"
