--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Redesign Tapsi </title>
     <meta
       name="description"
-      content="این وبسایت توسط صاحب محمدی به عنوان دوره طراحی حرفه ای رسپانسیو وب آماده شده است"
+      content="طراحی صفحه اول سایت تپسی با یکسری تغییرات اضافه"
     />
-    <meta property="og:title" content="دوره حرفه ای طراحی وب رسپانسیو" />
+    <meta property="og:title" content="Redesign-Tapsi" />
     <meta
       property="og:description"
-      content="این وبسایت توسط صاحب محمدی به عنوان دوره حرفه ای طراحی وب رسپانسیو آماده شده است"
+      content="طراحی صفحه اول سایت تپسی با یکسری تغییرات اضافه"
     />
     <link
       rel="stylesheet"
@@ -50,10 +50,10 @@
           <div class="bar bar-three"></div>
         </div>
         <ul class="list nav__list">
-          <li class="nav__item"><a href="#">پشتیبانی</a></li>
-          <li class="nav__item"><a href="#">خدمات کسب و کارها</a></li>
-          <li class="nav__item"><a href="#">فرصت های شغلی</a></li>
-          <li class="nav__item"><a href="#">وبلاگ</a></li>
+          <li class="nav__item"><a href="#services">سرویس های تپسی</a></li>
+          <li class="nav__item"><a href="#feature">خدمات کسب و کارها</a></li>
+          <li class="nav__item"><a href="#travell">جوایز رانندگان برتر</a></li>
+          <li class="nav__item"><a href="#contact-us">ارتباط با ما </a></li>
           <li class="nav__item cta">
             <a href="#" class="btn btn--primary btn--block">دانلود تپسی</a>
           </li>
@@ -137,7 +137,7 @@
       </div>
     </section>
 
-    <section class="services container block" data-aos="fade-up" data-aos-duration="700"
+    <section class="services container block" id="services" data-aos="fade-up" data-aos-duration="700"
     data-aos-easing="ease-in-out">
       <h2 class="services__title block-heading">سرویس های تپسی</h2>
       <div class="services__tabs">
@@ -349,7 +349,7 @@
       </div>
     </section>
 
-    <section class="feature container block" data-aos="fade-left" data-aos-duration="700"
+    <section class="feature container block" id="feature" data-aos="fade-left" data-aos-duration="700"
     data-aos-easing="ease-in-out">
       <div class="feature__image">
         <img src="/assets/images/i-mac-1.png" alt="" />
@@ -456,7 +456,7 @@
       </div>
     </section>
 
-    <section class="container travell block" data-aos="fade-left" data-aos-duration="700"
+    <section class="container travell block" id="travell" data-aos="fade-left" data-aos-duration="700"
     data-aos-easing="ease-in-out">
       <h2 class="block__heading">جوایز راننده برتر</h2>
       <div class="travell__slides">
@@ -690,7 +690,7 @@
       </div>
     </section>
 
-    <section class="container block" data-aos="fade-left" data-aos-duration="700"
+    <section class="container block" id="contact-us" data-aos="fade-left" data-aos-duration="700"
     data-aos-easing="ease-in-out">
       <h2 class="block-heading">ارتباط با ما</h2>
       <div class="contact-us">
